- Fixed bug #32587 (Apache2: errors sent to error_log do not include timestamps)